--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 /* จัดการลักษณะของ body ทั้งหน้า */
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
-  background-color: #e877ff; /* พื้นหลังสีชมพูอ่อน */
+  font-family: 'Arial', sans-serif;   
+  background-image: url('valentinebg.jpg');      /*พื้นหลังเป็นรุปภาพ*/
+  /* background-color: #e877ff;    พื้นหลังสีชมพูอ่อน */
+  background-size: cover;         /*ขยายให้เต็มขอบจอ*/
+  background-position: center;    /*จักให้อยู่กึ่งกลาง*/
+  background-repeat: no-repeat;   /*ไม่่ให้รูปซ้ำ*/
+
   color: #333;
   display: flex;
   align-items: center;
@@ -36,6 +41,7 @@ p{
 /* รูปภาพสำหรับหน้าแรก */
 .img {
   transition : transform 0.3s ease;
+  animation: fadeIn 2s ease-in-out;
   width: 300px;
   height: auto;
   border-radius: 15px; /* ขอบมน */
@@ -71,6 +77,7 @@ button {
 button:hover {
   background-color: #ff1493; /* สีชมพูเข้ม */
   font-size: 1.3em;
+  scale: 1.05;
 }
 
 .description {
@@ -89,11 +96,38 @@ form {
   margin: auto;
 }
 
-input, textarea {
+textarea {
   padding: 10px;
   font-size: 1em;
   border-radius: 8px;
   border: 1px solid #ccc;
+  animation: fadeIn 2s ease-in-out;
+}
+textarea:hover {
+  scale: 1.05;
+}
+
+#email {
+  padding: 10px;
+  font-size: 1em;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  animation: fadeIn 2s ease-in-out;
+  background-color: white;
+}
+#email:hover {
+  scale:1.05;
+}
+#name {
+  padding: 10px;
+  font-size: 1em;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  animation: fadeIn 2s ease-in-out;
+  background-color: white;
+}
+#name:hover {
+  scale:1.05;
 }
 
 #formbutton {
@@ -122,4 +156,5 @@ form label {
   font-weight: bold;
   margin-bottom: 5px;
   text-align: left;
+  animation: fadeIn 2s ease-in-out;
 }
